--- a/index.html
+++ b/index.html
@@ -1,15 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ALRD1 — Already Won</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {margin:0; display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif;}
-    h1 {font-size:3rem;}
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ALRD1</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Already Won. The Beat Starts Here 🎧</h1>
+
+    <header class="nav">
+        <div class="nav-inner">
+            <a href="#hero" class="logo">ALRD1</a>
+            <nav class="menu">
+            <a href="#hero">Home</a>       <!-- ✅ Home 버튼 추가 -->
+            <a href="#about">About Us</a>
+            <a href="#reviews">Reviews</a>
+            <a href="#quotes">Quotes</a>
+            <a href="#contact">Contact</a>
+            </nav>
+        </div>
+        </header>
+      
+
+  <!-- 1) 히어로(비디오 배경) 섹션 -->
+  <section id="hero" class="section hero">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="./assets/videos/background.mp4" type="video/mp4"/>
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">
+      <h1>Welcome to ALRD1</h1>
+      <p>You Already Won. The Beat Starts Here 🎧</p>
+      <a href="#quotes" class="btn">Get A Quote Now</a>
+    </div>
+  </section>
+
+  <!-- 2) About Us -->
+  <section id="about" class="section section-content">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>Wedding & Event DJ based in Vancouver. House, Hip-Hop, and everything in between — crafted for your moment.</p>
+    </div>
+  </section>
+
+  <!-- 3) Reviews -->
+  <section id="reviews" class="section section-alt">
+    <div class="container">
+      <h2>Reviews</h2>
+      <ul class="reviews">
+        <li>“Dance floor never emptied. Absolute pro.” — A.K.</li>
+        <li>“Perfect reads, perfect transitions.” — J.P.</li>
+        <li>“Best night of our lives.” — S&M</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- 4) Quotes -->
+  <section id="quotes" class="section section-content">
+    <div class="container">
+      <h2>Get A Quote</h2>
+      <p>Tell us the date, location, vibe, and guest count. We’ll tailor the set & pricing.</p>
+      <form class="quote-form" onsubmit="event.preventDefault(); alert('Thanks! We will get back to you.');">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Email" required />
+        <input type="text" placeholder="Event Date (YYYY-MM-DD)" />
+        <textarea placeholder="Tell me about your event..."></textarea>
+        <button type="submit" class="btn">Send</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- 5) Contact -->
+  <section id="contact" class="section section-alt">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:book@alrd1.com">book@alrd1.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/" target="_blank" rel="noopener">@alrd1</a></p>
+    </div>
+  </section>
+
+  <script>
+    // 모바일 주소창 높이 이슈 보정 (100dvh 지원 안 되는 브라우저용)
+    const setVH = () => {
+      document.documentElement.style.setProperty('--vh', window.innerHeight * 0.01 + 'px');
+    };
+    setVH(); window.addEventListener('resize', setVH);
+  </script>
 </body>
 </html>
