--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ALRD1</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
 
-    <header class="nav">
-        <div class="nav-inner">
-            <a href="#hero" class="logo">ALRD1</a>
-            <nav class="menu">
-            <a href="#hero">Home</a>       <!-- ✅ Home 버튼 추가 -->
-            <a href="#about">About Us</a>
-            <a href="#reviews">Reviews</a>
-            <a href="#quotes">Quotes</a>
-            <a href="#contact">Contact</a>
-            </nav>
-        </div>
-        </header>
-      
+  <!-- NAV -->
+  <header class="nav">
+    <div class="nav-inner">
+      <a href="#hero" class="logo">ALRD1</a>
+      <nav class="menu">
+        <a href="#hero">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#reviews">Reviews</a>
+        <a href="#quotes">Quotes</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-  <!-- 1) 히어로(비디오 배경) 섹션 -->
+  <!-- HERO -->
   <section id="hero" class="section hero">
     <video autoplay muted loop playsinline class="bg-video">
       <source src="./assets/videos/background.mp4" type="video/mp4"/>
-      Your browser does not support the video tag.
     </video>
     <div class="overlay">
       <h1>Welcome to ALRD1</h1>
@@ -35,7 +35,7 @@
     </div>
   </section>
 
-  <!-- 2) About Us -->
+  <!-- ABOUT -->
   <section id="about" class="section section-content">
     <div class="container">
       <h2>About Us</h2>
@@ -43,48 +43,152 @@
     </div>
   </section>
 
-  <!-- 3) Reviews -->
+  <!-- REVIEWS (좌우 번갈아) -->
   <section id="reviews" class="section section-alt">
     <div class="container">
       <h2>Reviews</h2>
-      <ul class="reviews">
-        <li>“Dance floor never emptied. Absolute pro.” — A.K.</li>
-        <li>“Perfect reads, perfect transitions.” — J.P.</li>
-        <li>“Best night of our lives.” — S&M</li>
-      </ul>
+      <div class="reviews-grid">
+        <div class="review">
+          <img src="./assets/rev1.jpg" alt="review photo" class="rev-photo"/>
+          <div class="rev-meta"><h3>A.K.</h3><div class="stars">★★★★★</div></div>
+          <p class="rev-text">“Dance floor never emptied. Absolute pro.”</p>
+        </div>
+        <div class="review">
+          <p class="rev-text">“Perfect reads, perfect transitions.”</p>
+          <div class="rev-meta"><h3>J.P.</h3><div class="stars">★★★★★</div></div>
+          <img src="./assets/rev2.jpg" alt="review photo" class="rev-photo"/>
+        </div>
+        <div class="review">
+          <img src="./assets/rev3.jpg" alt="review photo" class="rev-photo"/>
+          <div class="rev-meta"><h3>S&M</h3><div class="stars">★★★★★</div></div>
+          <p class="rev-text">“Best night of our lives.”</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- 4) Quotes -->
+  <!-- QUOTES (Formspree로 전송) -->
   <section id="quotes" class="section section-content">
     <div class="container">
       <h2>Get A Quote</h2>
       <p>Tell us the date, location, vibe, and guest count. We’ll tailor the set & pricing.</p>
-      <form class="quote-form" onsubmit="event.preventDefault(); alert('Thanks! We will get back to you.');">
-        <input type="text" placeholder="Your Name" required />
-        <input type="email" placeholder="Email" required />
-        <input type="text" placeholder="Event Date (YYYY-MM-DD)" />
-        <textarea placeholder="Tell me about your event..."></textarea>
+
+      <!-- 아래 YOUR_ID를 Formspree ID로 교체 -->
+      <form class="quote-form" action="https://formspree.io/f/YOUR_ID" method="POST">
+        <input type="hidden" name="_subject" value="New Quote Request from ALRD1" />
+
+        <!-- 기본 정보 -->
+        <input type="text"   name="name"     placeholder="Name" required />
+        <input type="email"  name="email"    placeholder="Email" required />
+        <input type="tel"    name="phone"    placeholder="Phone Number" />
+        <input type="text"   name="location" placeholder="Location of Event" />
+        <input type="date"   name="date"     placeholder="Date of Event" />
+
+        <!-- 이벤트 시간 -->
+        <label class="field-label">Event Time</label>
+        <div class="time-row">
+          <span>Start:</span>
+          <select name="start_hour">
+            <option value="">HH</option>
+            <option>00</option><option>01</option><option>02</option><option>03</option>
+            <option>04</option><option>05</option><option>06</option><option>07</option>
+            <option>08</option><option>09</option><option>10</option><option>11</option>
+            <option>12</option><option>13</option><option>14</option><option>15</option>
+            <option>16</option><option>17</option><option>18</option><option>19</option>
+            <option>20</option><option>21</option><option>22</option><option>23</option>
+          </select>
+          <select name="start_minute">
+            <option value="">MM</option>
+            <option>00</option><option>15</option><option>30</option><option>45</option>
+          </select>
+        </div>
+
+        <div class="time-row">
+          <span>End:</span>
+          <select name="end_hour">
+            <option value="">HH</option>
+            <option>00</option><option>01</option><option>02</option><option>03</option>
+            <option>04</option><option>05</option><option>06</option><option>07</option>
+            <option>08</option><option>09</option><option>10</option><option>11</option>
+            <option>12</option><option>13</option><option>14</option><option>15</option>
+            <option>16</option><option>17</option><option>18</option><option>19</option>
+            <option>20</option><option>21</option><option>22</option><option>23</option>
+          </select>
+          <select name="end_minute">
+            <option value="">MM</option>
+            <option>00</option><option>15</option><option>30</option><option>45</option>
+          </select>
+        </div>
+
+        <!-- 규모/타입 -->
+        <input type="text" name="guests" placeholder="Approx. Guest Count / Event Size" />
+
+        <label class="field-label">Event Type</label>
+        <select id="eventType" name="event_type">
+          <option value="">Select</option>
+          <option>Wedding</option>
+          <option>Pop-up</option>
+          <option>Social</option>
+          <option>Club</option>
+          <option>Corporate</option>
+          <option value="other">Other</option>
+        </select>
+        <input type="text" id="eventTypeOther" name="event_type_other"
+               placeholder="Please specify event type..." style="display:none;">
+
+        <!-- 파트 선택 -->
+        <label class="field-label">What parts do you need a DJ for?</label>
+        <div class="checks">
+          <label><input type="checkbox" name="parts" value="Ceremony" /> Ceremony</label>
+          <label><input type="checkbox" name="parts" value="Cocktail Hours" /> Cocktail Hours</label>
+          <label><input type="checkbox" name="parts" value="Reception" /> Reception</label>
+          <label><input type="checkbox" name="parts" value="Dance Floor" /> Dance Floor</label>
+          <label><input type="checkbox" id="otherCheck" name="parts" value="Other" /> Other</label>
+        </div>
+        <input type="text" id="otherText" name="parts_other"
+               placeholder="Please specify other parts..." style="display:none;">
+
+        <!-- 코멘트 -->
+        <textarea name="comments" placeholder="Tell me about your event or anything we should know..."></textarea>
+
         <button type="submit" class="btn">Send</button>
       </form>
     </div>
   </section>
 
-  <!-- 5) Contact -->
+  <!-- CONTACT -->
   <section id="contact" class="section section-alt">
     <div class="container">
       <h2>Contact</h2>
+      <p>Thanks for reaching out! We’ll get back to you shortly.</p>
+      <div class="socials">
+        <a href="https://instagram.com/" target="_blank" class="social"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://tiktok.com/"     target="_blank" class="social"><i class="fab fa-tiktok"></i> TikTok</a>
+      </div>
       <p>Email: <a href="mailto:book@alrd1.com">book@alrd1.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/" target="_blank" rel="noopener">@alrd1</a></p>
     </div>
   </section>
 
   <script>
-    // 모바일 주소창 높이 이슈 보정 (100dvh 지원 안 되는 브라우저용)
+    // iOS 100vh 보정
     const setVH = () => {
       document.documentElement.style.setProperty('--vh', window.innerHeight * 0.01 + 'px');
     };
     setVH(); window.addEventListener('resize', setVH);
+
+    // Event Type Other 토글
+    const eventType = document.getElementById('eventType');
+    const eventTypeOther = document.getElementById('eventTypeOther');
+    eventType.addEventListener('change', () => {
+      eventTypeOther.style.display = eventType.value === 'other' ? 'block' : 'none';
+    });
+
+    // Parts Other 토글
+    const otherCheck = document.getElementById('otherCheck');
+    const otherText = document.getElementById('otherText');
+    otherCheck.addEventListener('change', () => {
+      otherText.style.display = otherCheck.checked ? 'block' : 'none';
+    });
   </script>
 </body>
 </html>
