--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="container">
       <h2>About Us</h2>
       <p>Wedding & Event DJ based in Vancouver. House, Hip-Hop, and everything in between — crafted for your moment.</p>
+      <a href="moreabout.html" class="btn">More About Us</a>
     </div>
   </section>
 
@@ -165,7 +166,7 @@
         <a href="https://instagram.com/" target="_blank" class="social"><i class="fab fa-instagram"></i> Instagram</a>
         <a href="https://tiktok.com/"     target="_blank" class="social"><i class="fab fa-tiktok"></i> TikTok</a>
       </div>
-      <p>Email: <a href="mailto:book@alrd1.com">book@alrd1.com</a></p>
+      <p>Email: <a href="mailto:book@alrd1.com">alrd1team@gmail.com</a></p>
     </div>
   </section>
 
