--- a/moreabout.html
+++ b/moreabout.html
@@ -25,7 +25,7 @@
       <h2>More About Us</h2>
       <p>We are ALRD1 — Vancouver based DJs specializing in unforgettable weddings, parties, and events.</p>
       <p>Our philosophy is simple: <b>You Already Won</b>. From smooth cocktails to wild dance floors, we keep the vibe alive.</p>
-      <a href="index.html#contact" class="btn">Contact Us</a>
+      <a href="index.html#quotes" class="btn">Get A Quote Now</a>
     </div>
   </section>
 </body>
