--- a/index.html
+++ b/index.html
@@ -95,16 +95,18 @@
           <span>Start:</span>
           <select name="start_hour" required>
             <option value="">HH</option>
-            <option>00</option><option>01</option><option>02</option><option>03</option>
-            <option>04</option><option>05</option><option>06</option><option>07</option>
-            <option>08</option><option>09</option><option>10</option><option>11</option>
-            <option>12</option><option>13</option><option>14</option><option>15</option>
-            <option>16</option><option>17</option><option>18</option><option>19</option>
-            <option>20</option><option>21</option><option>22</option><option>23</option>
+            <option>1</option><option>2</option><option>3</option>
+            <option>4</option><option>5</option><option>6</option><option>7</option>
+            <option>8</option><option>9</option><option>10</option><option>11</option>
+            <option>12</option>
           </select>
           <select name="start_minute" required>
             <option value="">MM</option>
             <option>00</option><option>15</option><option>30</option><option>45</option>
+          </select>
+          <select name="start_ampm" required>
+            <option value="">AM/PM</option>
+            <option>AM</option><option>PM</option>
           </select>
         </div>
 
@@ -112,16 +114,18 @@
           <span>End:</span>
           <select name="end_hour" required>
             <option value="">HH</option>
-            <option>00</option><option>01</option><option>02</option><option>03</option>
-            <option>04</option><option>05</option><option>06</option><option>07</option>
-            <option>08</option><option>09</option><option>10</option><option>11</option>
-            <option>12</option><option>13</option><option>14</option><option>15</option>
-            <option>16</option><option>17</option><option>18</option><option>19</option>
-            <option>20</option><option>21</option><option>22</option><option>23</option>
+            <option>1</option><option>2</option><option>3</option>
+            <option>4</option><option>5</option><option>6</option><option>7</option>
+            <option>8</option><option>9</option><option>10</option><option>11</option>
+            <option>12</option>
           </select>
           <select name="end_minute" required>
             <option value="">MM</option>
             <option>00</option><option>15</option><option>30</option><option>45</option>
+          </select>
+          <select name="end_ampm" required>
+            <option value="">AM/PM</option>
+            <option>AM</option><option>PM</option>
           </select>
         </div>
 
@@ -167,8 +171,8 @@
       <h2>Contact</h2>
       <p>Thanks for reaching out! We’ll get back to you shortly.</p>
       <div class="socials">
-        <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank" class="social"><i class="fab fa-instagram"></i> Instagram</a>
-        <a href="https://tiktok.com/@alrd1__"     target="_blank" class="social"><i class="fab fa-tiktok"></i> TikTok</a>
+        <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank" class="social"><i class="fab fa-instagram"></i></a>
+        <a href="https://tiktok.com/@alrd1__"     target="_blank" class="social"><i class="fab fa-tiktok"></i></a>
       </div>
       <p>Email: <a href="mailto:alrd1team@gmail.com">alrd1team@gmail.com</a></p>
     </div>
@@ -246,8 +250,10 @@
         'input[name="date"]',
         'select[name="start_hour"]',
         'select[name="start_minute"]',
+        'select[name="start_ampm"]',
         'select[name="end_hour"]',
         'select[name="end_minute"]',
+        'select[name="end_ampm"]',
         'input[name="guests"]',
         'select[name="event_type"]'
       ];
