added email logo

--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
       <div class="socials">
         <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank" class="social"><i class="fab fa-instagram"></i></a>
         <a href="https://tiktok.com/@alrd1__"     target="_blank" class="social"><i class="fab fa-tiktok"></i></a>
+        <a href="mailto:alrd1team@gmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a>
       </div>
-      <p>Email: <a href="mailto:alrd1team@gmail.com">alrd1team@gmail.com</a></p>
+      
     </div>
   </section>
 
