--- a/moreabout.html
+++ b/moreabout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>More About Us - ALRD1</title>
+  <title>More About Me - ALRD1</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -15,7 +15,7 @@
       </button>
       <nav class="menu">
         <a href="index.html#hero">Home</a>
-        <a href="index.html#about">About Us</a>
+        <a href="index.html#about">About Me</a>
         <a href="index.html#reviews">Reviews</a>
         <a href="index.html#quotes">Quotes</a>
         <a href="index.html#contact">Contact</a>
@@ -23,14 +23,46 @@
     </div>
   </header>
 
-  <section class="section section-content">
-    <div class="container">
-      <h2>More About Us</h2>
-      <p>We are ALRD1 — Vancouver based DJs specializing in unforgettable weddings, parties, and events.</p>
-      <p>Our philosophy is simple: <b>You Already Won</b>. From smooth cocktails to wild dance floors, we keep the vibe alive.</p>
-      <a href="index.html#quotes" class="btn">Get A Quote Now</a>
+  <!-- Video Section 1 -->
+  <section class="video-section">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="./assets/videos/2025_08_17 14_28_new.mp4" type="video/mp4"/>
+    </video>
+    <div class="video-overlay">
+      <div class="container">
+        <h2>ALRD1</h2>
+        <p>Vancouver's Premier DJ Experience</p>
+      </div>
     </div>
   </section>
+
+  <!-- Video Section 2 -->
+  <section class="video-section">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="./assets/videos/2025_05_12 22_56.mp4" type="video/mp4"/>
+    </video>
+    <div class="video-overlay">
+      <div class="container">
+        <h2>You are ALREADY the ONE.</h2>
+        <p>Creating Unforgettable Moments</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Video Section 3 -->
+  <section class="video-section">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="./assets/videos/2025_08_17 14_34 (2)_1.mp4" type="video/mp4"/>
+    </video>
+    <div class="video-overlay">
+      <div class="container">
+        <h2>You Already Won</h2>
+        <p>The Beat Starts Here 🎧</p>
+        <a href="index.html#quotes" class="btn">Get A Quote Now</a>
+      </div>
+    </div>
+  </section>
+
   <script>
     // Mobile menu toggle (More About page)
     const toggleBtn = document.querySelector('.menu-toggle');
