--- a/index.html
+++ b/index.html
@@ -19,22 +19,17 @@
       <nav class="menu">
         <a href="#hero">Home</a>
         <a href="#about">About Me</a>
-        <a href="#reviews">Reviews</a>
+        <!-- <a href="#reviews">Reviews</a> -->
         <a href="#quotes">Quotes</a>
-        <div class="nav-dropdown">
-          <a href="#contact" class="dropdown-trigger">Contact</a>
-          <div class="dropdown-menu">
-            <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank">
-              <i class="fab fa-instagram"></i> Instagram
-            </a>
-            <a href="https://tiktok.com/@alrd1__" target="_blank">
-              <i class="fab fa-tiktok"></i> TikTok
-            </a>
-            <a href="mailto:alrd1team@gmail.com">
-              <i class="fas fa-envelope"></i> Email
-            </a>
-          </div>
-        </div>
+        <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank" class="social-nav">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://tiktok.com/@alrd1__" target="_blank" class="social-nav">
+          <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="mailto:alrd1team@gmail.com" class="social-nav">
+          <i class="fas fa-envelope"></i>
+        </a>
       </nav>
     </div>
   </header>
@@ -107,7 +102,7 @@
     </div>
   </section>
 
-  <!-- REVIEWS (좌우 번갈아) -->
+  <!-- -- REVIEWS (좌우 번갈아)
   <section id="reviews" class="section section-alt">
     <div class="container">
       <h2>Reviews</h2>
@@ -129,7 +124,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- QUOTES (Formspree로 전송) -->
   <section id="quotes" class="section section-content">
