--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <section id="quotes" class="section section-content">
     <div class="container">
       <h2>Get A Quote</h2>
-      <p>Please complete the form below to get a quote.</p>
+      <p>Please complete the form below.</p>
 
       <form class="quote-form" action="https://formsubmit.co/alrd1team@gmail.com" method="POST">
         <input type="hidden" name="_subject" value="New Quote Request from ALRD1" />
@@ -223,13 +223,12 @@
   <!-- CONTACT -->
   <section id="contact" class="section section-alt">
     <div class="container">
-      <h2>Contact</h2>
-      <p>Thanks for choosing ALRD1! We’ll get back to you shortly.</p>
       <div class="socials">
         <a href="https://www.instagram.com/alrd1_?igsh=MTU4aXpvMXV3bXBoeg==" target="_blank" class="social"><i class="fab fa-instagram"></i></a>
         <a href="https://tiktok.com/@alrd1__"     target="_blank" class="social"><i class="fab fa-tiktok"></i></a>
         <a href="mailto:alrd1team@gmail.com" target="_blank" class="social"><i class="fas fa-envelope"></i></a>
       </div>
+      <h2>Thanks for choosing ALRD1!</h2>
       
     </div>
   </section>
