--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- HERO -->
   <section id="hero" class="section hero">
-    <video autoplay muted loop playsinline class="bg-video">
+    <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
       <source src="./assets/videos/background.mp4" type="video/mp4"/>
     </video>
     <div class="overlay">
@@ -50,8 +50,8 @@
   <section class="video-sections">
     <!-- Video Section 1 -->
     <div class="video-section">
-      <video autoplay muted loop playsinline class="bg-video">
-        <source src="./assets/videos/2025_08_17 14_28_new.mp4" type="video/mp4"/>
+      <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+        <source src="./assets/videos/aboutme1.mp4" type="video/mp4"/>
       </video>
       <div class="video-overlay">
         <div class="container">
@@ -63,8 +63,8 @@
 
     <!-- Video Section 2 -->
     <div class="video-section">
-      <video autoplay muted loop playsinline class="bg-video">
-        <source src="./assets/videos/2025_05_12 22_56.mp4" type="video/mp4"/>
+      <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+        <source src="./assets/videos/aboutme2.mp4" type="video/mp4"/>
       </video>
       <div class="video-overlay">
         <div class="container">
@@ -76,8 +76,8 @@
 
     <!-- Video Section 3 -->
     <div class="video-section">
-      <video autoplay muted loop playsinline class="bg-video">
-        <source src="./assets/videos/2025_08_17 14_34 (2)_1.mp4" type="video/mp4"/>
+      <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+        <source src="./assets/videos/aboutme3.mp4" type="video/mp4"/>
       </video>
       <div class="video-overlay">
         <div class="container">
@@ -90,7 +90,7 @@
 
   <!-- ABOUT -->
   <section id="about" class="section section-content about-hero">
-    <video autoplay muted loop playsinline class="bg-video">
+    <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
       <source src="./assets/videos/20250816_220659_2_1.mp4" type="video/mp4"/>
     </video>
     <div class="overlay">
