--- a/moreabout.html
+++ b/moreabout.html
@@ -25,8 +25,8 @@
 
   <!-- Video Section 1 -->
   <section class="video-section">
-    <video autoplay muted loop playsinline class="bg-video">
-      <source src="./assets/videos/2025_08_17 14_28_new.mp4" type="video/mp4"/>
+    <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+      <source src="./assets/videos/aboutme1.mp4" type="video/mp4"/>
     </video>
     <div class="video-overlay">
       <div class="container">
@@ -38,8 +38,8 @@
 
   <!-- Video Section 2 -->
   <section class="video-section">
-    <video autoplay muted loop playsinline class="bg-video">
-      <source src="./assets/videos/2025_05_12 22_56.mp4" type="video/mp4"/>
+    <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+      <source src="./assets/videos/aboutme2.mp4" type="video/mp4"/>
     </video>
     <div class="video-overlay">
       <div class="container">
@@ -51,8 +51,8 @@
 
   <!-- Video Section 3 -->
   <section class="video-section">
-    <video autoplay muted loop playsinline class="bg-video">
-      <source src="./assets/videos/2025_08_17 14_34 (2)_1.mp4" type="video/mp4"/>
+    <video autoplay muted loop playsinline webkit-playsinline class="bg-video">
+      <source src="./assets/videos/aboutme3.mp4" type="video/mp4"/>
     </video>
     <div class="video-overlay">
       <div class="container">
